--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+/icons-source
+/icons
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
